# based_alaska

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
based_alaska/: main.py
based_alaska/configs/: master.yaml  northern_alaska_anat.yaml
based_alaska/scripts/: check_config_against_master.py  convert_dggs_faults_shapefile.py  curate_shapefile.py
based_alaska/tests/test_data/: nalaska_moment_tensors.xml
based_alaska/utils/: convert.py  read.py
